# AndroidRustFFI

./: readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/androidrustffi/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/androidrustffi/: MainActivity.kt  RustService.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/androidrustffi/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust-lib/: Cargo.toml
rust-lib/.cargo/: config.toml
rust-lib/src/: lib.rs  main.rs
